# esp32_console

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  CMakeLists_img_demo.txt  CMakeLists_og.txt  config.h  idf_component.yml  main.cpp  main_img_demo.cpp  main_og.cpp  main_sandbox.cpp  main_sprite_test.cpp  secret_copy.h
main/components/audio_player_component/: README.md  audio_player_component.cpp  audio_player_component.h
main/components/audio_visualizer/: README.md  audio_visualizer.cpp  audio_visualizer.h
main/components/file_explorer/: README.md  file_explorer.cpp  file_explorer.h
main/components/inline_audio_player_component/: inline_audio_player_component.cpp  inline_audio_player_component.h
main/components/memory_monitor_component/: memory_monitor_component.cpp  memory_monitor_component.h
main/components/popup_manager/: popup_manager.cpp  popup_manager.h
main/components/status_bar_component/: status_bar_component.cpp  status_bar_component.h
main/components/text_viewer/: README.md  text_viewer.cpp  text_viewer.h
main/config/: app_config.h  board_config.h  secrets_template.h
main/controllers/audio_manager/: README.md  audio_manager.cpp  audio_manager.h
main/controllers/audio_recorder/: README.md  audio_recorder.cpp  audio_recorder.h
main/controllers/button_manager/: README.md  button_manager.cpp  button_manager.h
main/controllers/daily_summary_manager/: daily_summary_manager.cpp  daily_summary_manager.h
main/controllers/data_manager/: README.md  data_manager.cpp  data_manager.h
main/controllers/furniture_data_manager/: furniture_data_manager.cpp  furniture_data_manager.h
main/controllers/habit_data_manager/: habit_data_manager.cpp  habit_data_manager.h
main/controllers/littlefs_manager/: littlefs_manager.cpp  littlefs_manager.h
main/controllers/lvgl_vfs_driver/: lvgl_fs_driver.cpp  lvgl_fs_driver.h
main/controllers/notification_manager/: notification_manager.cpp  notification_manager.h
main/controllers/pet_manager/: pet_manager.cpp  pet_manager.h
main/controllers/power_manager/: README.md  power_manager.cpp  power_manager.h
main/controllers/screen_manager/: README.md  screen_manager.cpp  screen_manager.h
main/controllers/sd_card_manager/: README.md  sd_card_manager.cpp  sd_card_manager.h
main/controllers/sprite_cache_manager/: sprite_cache_manager.cpp  sprite_cache_manager.h
main/controllers/stt_manager/: README.md  stt_manager.cpp  stt_manager.h
main/controllers/weather_manager/: weather_manager.cpp  weather_manager.h
main/controllers/wifi_manager/: README.md  wifi_manager.cpp  wifi_manager.h
main/controllers/wifi_streamer/: README.md  wifi_streamer.cpp  wifi_streamer.h
main/littlefs/: welcome.txt
main/models/: asset_config.h  daily_summary_model.h  furniture_data_model.h  habit_data_models.h  notification_data_model.h  pet_asset_data.h  pet_data_model.h  player_data_model.h
main/server_certs/: groq_api_ca.pem  open_meteo_ca.pem
main/views/: view.h  view_manager.cpp  view_manager.h
main/views/add_notification_view/: add_notification_view.cpp  add_notification_view.h
main/views/button_test_view/: button_test_view.cpp  button_test_view.h
main/views/buzzer_test_view/: buzzer_test_view.cpp  buzzer_test_view.h
main/views/click_counter_view/: click_counter_view.cpp  click_counter_view.h  coin_pile.c
main/views/core/daily_journal_view/: daily_journal_view.cpp  daily_journal_view.h
main/views/file_explorer/: file_explorer.cpp  file_explorer.h
main/views/habit_add_view/: habit_add_view.cpp  habit_add_view.h
main/views/habit_category_manager_view/: habit_category_manager_view.cpp  habit_category_manager_view.h
main/views/habit_history_view/: habit_history_view.cpp  habit_history_view.h
main/views/habit_manager_view/: habit_manager_view.cpp  habit_manager_view.h
main/views/image_test_view/: image_test_view.cpp  image_test_view.h
main/views/littlefs_test_view/: littlefs_test_view.h
main/views/menu_view/: menu_view.cpp  menu_view.h
main/views/mic_test_view/: mic_test_view.cpp  mic_test_view.h
main/views/multi_click_test_view/: multi_click_test_view.cpp  multi_click_test_view.h
main/views/notification_history_view/: notification_history_view.cpp  notification_history_view.h
main/views/pomodoro_view/: README.md  pomodoro_view.cpp  pomodoro_view.h
main/views/popup_test_view/: popup_test_view.h
main/views/sd_error_view/: sd_error_view.cpp  sd_error_view.h
main/views/sd_test_view/: sd_test_view.cpp  sd_test_view.h
main/views/speaker_test_view/: speaker_test_view.cpp  speaker_test_view.h
main/views/standby_view/: standby_view.cpp  standby_view.h
main/views/track_habits_view/: track_habits_view.cpp  track_habits_view.h
main/views/voice_note_player_view/: voice_note_player_view.cpp  voice_note_player_view.h
main/views/voice_note_view/: voice_note_view.cpp  voice_note_view.h
main/views/volume_tester_view/: volume_tester_view.cpp  volume_tester_view.h
main/views/wifi_stream_view/: wifi_stream_view.cpp  wifi_stream_view.h
(+65 files in other folders)
